fixed overflow in nav

--- a/style.css
+++ b/style.css
@@ -232,11 +232,14 @@ box-shadow: 0px 0px 189px 3px rgba(0,255,255,0.51);
 .content-section .social{
 	text-align: center;
 }
+.nav-title{
+    font-size: 1.5rem;
+}
 .nav-title img{
     display: block;
     width: 50px;
     height: 50px;
-    margin: 0 1rem;
+    margin: 0 .5rem;
 }
 }
 
